# yolo-jail

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF-credentials-logout-2026-04-28.md  HANDOFF-credentials-logout.md  HANDOFF-credentials-root-cause-2026-04-28.md  Justfile  LICENSE  NOTICE  OPEN_QUESTIONS.md  README.md  SECURITY.md  flake.nix  main.py  mise.toml  pyproject.toml  pyrightconfig.json  result  yolo-enter.sh  yolo-jail.json
.copilot/skills/committing-changes/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly-macos.yml  publish.yml
docs/: NAME_CANDIDATES.md  OPEN_SOURCE_CHECKLIST.md  USER_GUIDE.md  claude-oauth-mitm-proxy-plan.md  claude-token-logouts.md  config-safety.md  loophole-protocol.md  loopholes.md  macos.md  platform-comparison.md  security-shim.md  storage-and-config.md
docs/design/: 001_initial_architecture.md
docs/plans/: cross-project-improvement-roadmap.md
docs/research/: 2026-02-16_chrome-devtools-docker-nix.md  README.md
docs/tasks/: 002_podman-runtime.md
loopholes/claude-oauth-broker/: README.md  claude-oauth-broker.service  manifest.jsonc
scripts/: README.md  claude-token-refresher.py  claude-token-refresher.service  claude-token-refresher.timer  public-files.txt
src/: claude_refresher.py  cli.py  entrypoint.py  entrypoint.sh  host_processes.py  host_service.py  jail_daemon_supervisor.py  loopholes.py  oauth_broker.py  oauth_broker_jail.py  prune.py  yolo_ps.py
src/bundled_loopholes/audio/: README.md  manifest.jsonc
src/bundled_loopholes/claude-oauth-broker/: README.md
src/bundled_loopholes/host-processes/: manifest.jsonc
src/shims/: apt-get  find  grep  rm
tests/: conftest.py  test_cli_commands.py  test_cli_unit.py  test_config_merge.py  test_doctor_inactive_loopholes.py  test_entrypoint.py  test_handoff_bugs.py  test_host_processes.py  test_host_service.py  test_jail.py  test_jail_daemon_supervisor.py  test_jail_helpers.py  test_loopholes.py  test_macos_paths.py  test_oauth_broker.py  test_oauth_broker_jail.py  test_prune.py  test_runtime.py
yolo-jail-runner/: SKILL.md
