[tool.uv]
package = true

[project]
name = "yolo-jail"
version = "0.1.0"
description = "Secure container jail for AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyjson5>=2.0.0",
    "rich>=14.3.2",
    "typer>=0.23.1",
]

[project.scripts]
yolo = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
markers = [
    "slow: integration tests that spin up containers (skipped during promote)",
]
