[tool.uv]
package = true

[project]
name = "yolo-jail"
dynamic = ["version"]
description = "Secure container jail for AI agents — run Claude Code, Copilot, and Gemini in YOLO mode safely"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
    {name = "Matt Schulkind"},
]
keywords = ["ai", "agents", "docker", "podman", "sandbox", "claude", "copilot", "gemini", "security", "nix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyjson5>=2.0.0",
    "rich>=14.3.2",
    "typer>=0.23.1",
]

[project.urls]
Homepage = "https://github.com/mschulkind-oss/yolo-jail"
Repository = "https://github.com/mschulkind-oss/yolo-jail"
Documentation = "https://github.com/mschulkind-oss/yolo-jail/blob/main/docs/USER_GUIDE.md"
Issues = "https://github.com/mschulkind-oss/yolo-jail/issues"

[project.scripts]
yolo = "src.cli:main"
yolo-claude-oauth-broker-host = "src.oauth_broker:main"
yolo-host-processes = "src.host_processes:main"
yolo-ps = "src.yolo_ps:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools-scm]
version_file = "src/_version.py"

[tool.vcs-versioning]
version_file = "src/_version.py"

[tool.setuptools]
packages = ["src", "src.bundled_loopholes"]

[tool.setuptools.package-data]
src = ["flake.nix", "flake.lock", "shims/*"]
"src.bundled_loopholes" = ["**/*"]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
markers = [
    "slow: integration tests that spin up containers (skipped during promote)",
]
